[package]
name = "session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["full"] }
tokio-util = "0.7"
log = "0.4"
futures = "0.3"
uuid = { version = "1.3", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"